[gd_scene load_steps=6 format=3 uid="uid://smvna3svyub0"]

[ext_resource type="Script" uid="uid://cpks2y1o8qkbq" path="res://scenes/game_areas/character_list.gd" id="1_7xw7y"]
[ext_resource type="Theme" uid="uid://dofpxe3roxdeb" path="res://ui/game_theme.tres" id="1_yny4u"]
[ext_resource type="FontFile" uid="uid://b5b4h4wmxrrqb" path="res://assets/fonts/Oswald-VariableFont_wght.ttf" id="2_3254e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8lxm"]
bg_color = Color(0.917647, 0.839216, 0.756863, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.443137, 0.0196078, 0.0156863, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontVariation" id="FontVariation_7xw7y"]
base_font = ExtResource("2_3254e")
variation_opentype = {
2003265652: 500
}

[node name="CharacterList" type="PanelContainer"]
custom_minimum_size = Vector2(255, 0)
offset_right = 255.0
offset_bottom = 207.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_k8lxm")
script = ExtResource("1_7xw7y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="AllCharactersVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="LocalCharacters" type="VBoxContainer" parent="MarginContainer/AllCharactersVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/AllCharactersVBox/LocalCharacters"]
layout_mode = 2
theme = ExtResource("1_yny4u")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_7xw7y")
theme_override_font_sizes/font_size = 18
text = "LOCAL CHARACTERS"

[node name="LocalRow1" type="HBoxContainer" parent="MarginContainer/AllCharactersVBox/LocalCharacters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Local1" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Local2" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Local3" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="LocalRow2" type="HBoxContainer" parent="MarginContainer/AllCharactersVBox/LocalCharacters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Local4" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Local5" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Local6" type="TextureButton" parent="MarginContainer/AllCharactersVBox/LocalCharacters/LocalRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="DistantCharacters" type="VBoxContainer" parent="MarginContainer/AllCharactersVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Label2" type="Label" parent="MarginContainer/AllCharactersVBox/DistantCharacters"]
layout_mode = 2
theme = ExtResource("1_yny4u")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_7xw7y")
theme_override_font_sizes/font_size = 18
text = "DISTANT CHARACTERS"

[node name="DistantRow1" type="HBoxContainer" parent="MarginContainer/AllCharactersVBox/DistantCharacters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Distant1" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Distant2" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Distant3" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="DistantRow2" type="HBoxContainer" parent="MarginContainer/AllCharactersVBox/DistantCharacters"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="Distant4" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Distant5" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="Distant6" type="TextureButton" parent="MarginContainer/AllCharactersVBox/DistantCharacters/DistantRow2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0
